--- a/trabalho01.ipynb
+++ b/trabalho01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
        "29            -               Evasão        NaN                21A  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "908  Obrigatória   Registro ativo        C                21A  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
        "60.017628205128204"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
        "10  2022  76.428571"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
        "19   Registro ativo        D                21A  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
        "22.037037037037038"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1445,7 @@
        "10  2022  19.777778"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1515,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
        "9  2022       3"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1635,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1744,7 @@
        "11  2022           122"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1829,7 @@
        "4  2015     7.0            35"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
        "11  2022     3.0           122            2.459016"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2293,7 +2293,7 @@
        "580  Obrigatória  Conclusão formatura      NaN                21A  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2305,13 +2305,427 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#5. Como os anos de pandemia impactaram no rendimento dos estudantes em relação aos anos anteriores, considerando o rendimento dos aprovados, \n",
     "# a taxa de cancelamento e as reprovações? \n",
     "# Considere como anos de pandemia os anos de 2020 e 2021."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pandemia = df[(df['ano'] == 2020) | (df['ano'] == 2021)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pandemia_aprovados = df_pandemia[df_pandemia['status']== 'Aprovado']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.05797101449275"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pandemia_aprovados['nota'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "status     \n",
+       "Aprovado       0.565574\n",
+       "R-nota         0.192623\n",
+       "Cancelado      0.135246\n",
+       "R-freq         0.081967\n",
+       "Matriculado    0.024590\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pandemia.value_counts('status', normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_antes_pandemia = df[df['ano'] < 2020]\n",
+    "df_antes_aprovados = df_antes_pandemia[df_antes_pandemia['status']== 'Aprovado']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52.09069767441861"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_antes_aprovados['nota'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "status\n",
+       "Aprovado     0.791897\n",
+       "R-nota       0.162063\n",
+       "R-freq       0.040516\n",
+       "Cancelado    0.003683\n",
+       "Reprovado    0.001842\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_antes_pandemia.value_counts('status', normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6- Compare a volta às aulas híbrida (2022 período 1) com os anos de pandemia e os anos anteriores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>matricula</th>\n",
+       "      <th>codigo</th>\n",
+       "      <th>disciplina</th>\n",
+       "      <th>periodo</th>\n",
+       "      <th>ano</th>\n",
+       "      <th>curriculo</th>\n",
+       "      <th>ch</th>\n",
+       "      <th>nota</th>\n",
+       "      <th>frequencia</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>observacao</th>\n",
+       "      <th>natureza</th>\n",
+       "      <th>situacaoDiscente</th>\n",
+       "      <th>nomeTuma</th>\n",
+       "      <th>codigoCurriculoSie</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>CI1055</td>\n",
+       "      <td>ALGORITMOS E ESTRUTURAS DE DADOS 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>R-freq</td>\n",
+       "      <td>TURMA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Obrigatória</td>\n",
+       "      <td>Registro ativo</td>\n",
+       "      <td>BCC2</td>\n",
+       "      <td>21A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>3</td>\n",
+       "      <td>CI1055</td>\n",
+       "      <td>ALGORITMOS E ESTRUTURAS DE DADOS 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>60</td>\n",
+       "      <td>72</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Aprovado</td>\n",
+       "      <td>TURMA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Obrigatória</td>\n",
+       "      <td>Registro ativo</td>\n",
+       "      <td>BCC1</td>\n",
+       "      <td>21A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>4</td>\n",
+       "      <td>CI1055</td>\n",
+       "      <td>ALGORITMOS E ESTRUTURAS DE DADOS 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cancelado</td>\n",
+       "      <td>TURMA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Obrigatória</td>\n",
+       "      <td>Registro ativo</td>\n",
+       "      <td>BCC2</td>\n",
+       "      <td>21A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>11</td>\n",
+       "      <td>CI1055</td>\n",
+       "      <td>ALGORITMOS E ESTRUTURAS DE DADOS 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90</td>\n",
+       "      <td>R-nota</td>\n",
+       "      <td>TURMA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Obrigatória</td>\n",
+       "      <td>Trancamento</td>\n",
+       "      <td>BCC5</td>\n",
+       "      <td>21A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>18</td>\n",
+       "      <td>CI1055</td>\n",
+       "      <td>ALGORITMOS E ESTRUTURAS DE DADOS 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Sim</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>R-nota</td>\n",
+       "      <td>TURMA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Obrigatória</td>\n",
+       "      <td>Trancamento</td>\n",
+       "      <td>BCC3</td>\n",
+       "      <td>21A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    matricula  codigo                          disciplina periodo   ano  \\\n",
+       "7           1  CI1055  ALGORITMOS E ESTRUTURAS DE DADOS 1       1  2022   \n",
+       "10          3  CI1055  ALGORITMOS E ESTRUTURAS DE DADOS 1       1  2022   \n",
+       "11          4  CI1055  ALGORITMOS E ESTRUTURAS DE DADOS 1       1  2022   \n",
+       "27         11  CI1055  ALGORITMOS E ESTRUTURAS DE DADOS 1       1  2022   \n",
+       "36         18  CI1055  ALGORITMOS E ESTRUTURAS DE DADOS 1       1  2022   \n",
+       "\n",
+       "   curriculo  ch  nota  frequencia     status   tipo observacao     natureza  \\\n",
+       "7        Sim  60     0          25     R-freq  TURMA        NaN  Obrigatória   \n",
+       "10       Sim  60    72         100   Aprovado  TURMA        NaN  Obrigatória   \n",
+       "11       Sim  60     0           0  Cancelado  TURMA        NaN  Obrigatória   \n",
+       "27       Sim  60     1          90     R-nota  TURMA        NaN  Obrigatória   \n",
+       "36       Sim  60     0         100     R-nota  TURMA        NaN  Obrigatória   \n",
+       "\n",
+       "   situacaoDiscente nomeTuma codigoCurriculoSie  \n",
+       "7    Registro ativo     BCC2                21A  \n",
+       "10   Registro ativo     BCC1                21A  \n",
+       "11   Registro ativo     BCC2                21A  \n",
+       "27      Trancamento     BCC5                21A  \n",
+       "36      Trancamento     BCC3                21A  "
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_2022 = df[(df['ano'] == 2022) & (df['periodo'] == '1')]\n",
+    "df1_2022_aprovados = df[df['status'] == 'Aprovado']\n",
+    "df1_2022.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60.017628205128204"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_2022_aprovados['nota'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "status\n",
+       "Aprovado       0.589474\n",
+       "R-nota         0.284211\n",
+       "R-freq         0.073684\n",
+       "Matriculado    0.031579\n",
+       "Cancelado      0.021053\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_2022.value_counts('status', normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#7. Compare a volta às aulas presencial (2022 período 2) com a volta híbrida do item anterior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2_2022 = df[(df['ano'] == 2022) & (df['periodo'] == '2')]\n",
+    "df2_2022_aprovados = df[df['status'] == 'Aprovado']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60.017628205128204"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2_2022_aprovados['nota'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "status\n",
+       "Matriculado    1.0\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2_2022.value_counts('status', normalize=True)"
    ]
   },
   {
